--- a/app/Resources/views/frontpage.html.twig
+++ b/app/Resources/views/frontpage.html.twig
@@ -2,8 +2,8 @@
 {% block body %}
     <h1>Welkom</h1>
         <div class="vertical-menu">
-            <a href="{{ path('') }}">Alle artikelen</a></br>
-            <a href="{{ path('nieuwproduct') }}">Nieuw artikel toevoegen</a></br>
+            <a href="{{ path('alleartikelen') }}">Alle artikelen</a></br>
+            <a href="{{ path('nieuwartikel') }}">Nieuw artikel toevoegen</a></br>
             <a href="#">Artikelinformatie</a></br>
             <a href="#">Gebruikers toevoegen</a></br>
             <a href="#">Link 3</a></br>
