--- a/app/Resources/views/alle_artikelen.html.twig
+++ b/app/Resources/views/alle_artikelen.html.twig
@@ -5,11 +5,12 @@
 
   <table style="width:80%">
   <tr>
-    <h4> Artikel:</h4>
+    <h4> {{artikel.artikelnummer}}</h4>
     <li style="color:black"> {{ artikel.artikelnummer }}</li>
     <li style="color:black"> {{ artikel.omschrijving }}</li>
     <li style="color:black"> {{ artikel.magazijnlocatie }}</li>
     <li style="color:black"> {{ artikel.voorraadaantal }}</li>
-
+    <li><a href="{{ path('wijzigartikel',{'artikelnummer':artikel.artikelnummer}) }}">WijzigArtikel</a></li>
+    
 	{% endfor %}
 {% endblock %}
