--- a/app/Resources/views/alle_artikelen.html.twig
+++ b/app/Resources/views/alle_artikelen.html.twig
@@ -5,7 +5,7 @@
 
   <table style="width:80%">
   <tr>
-    <h4> Artikel:</h4>
+    <h4>{{ artikel.artikelnummer }}</h4>
     <li style="color:black"> {{ artikel.artikelnummer }}</li>
     <li style="color:black"> {{ artikel.omschrijving }}</li>
     <li style="color:black"> {{ artikel.magazijnlocatie }}</li>
