--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <title>Lunenburg</title>
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="logo-lunenburg-klein.png" />
-        <link rel="stylesheet" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
         <script src=""{{ asset('js/jquery-3.2.1.min.js') }}></script>
         <script src="{{ 'js/bootstrap.min.js' }}"></script>
     </head>
