--- a/app/Resources/views/alle_artikelen.html.twig
+++ b/app/Resources/views/alle_artikelen.html.twig
@@ -19,8 +19,9 @@
         <th>Magazijnlocatie</th>
         <th>Voorraad</th>
         <th>Bestelserie</th>
-        <th>Artikelinformatie wijzigen</th>
-      </tr>
+        <th>Artikelinformatie wijzigen magazijnbeheerder:</th>
+        <th>Artikelinformatie wijzigen inkoper:</th>
+       </tr>
     </thead>
     <tbody>
      {% for artikel in artikelen %}
@@ -30,7 +31,8 @@
         <td>{{ artikel.magazijnlocatie }}</td>
         <td>{{ artikel.voorraadaantal }}</td>
         <td>{{ artikel.bestelserie }}</td>
-        <td><a href="{{ path('wijzigartikel',{'artikelnummer':artikel.artikelnummer}) }}">Wijzigen</a></td></td>
+        <td><a href="{{ path('magazijnbeheerderwijzigartikel',{'artikelnummer':artikel.artikelnummer}) }}">Wijzigen</a></td></td>
+        <td><a href="{{ path('inkoperwijzigartikel',{'artikelnummer':artikel.artikelnummer}) }}">Wijzigen</a></td></td>
       </tr>
     </tbody>
     {% endfor %}
