--- a/app/Resources/views/alle_artikelen.html.twig
+++ b/app/Resources/views/alle_artikelen.html.twig
@@ -18,8 +18,10 @@
         <th>Omschrijving</th>
         <th>Magazijnlocatie</th>
         <th>Voorraad</th>
+        <th>Code vervangend artikel</th>
         <th>Bestelserie</th>
-        <th>Artikelinformatie wijzigen magazijnbeheerder:</th>
+        <th>Inkoopprijs</th>
+        <th>Artikelinformatie wijzigen magazijnmeester:</th>
         <th>Artikelinformatie wijzigen inkoper:</th>
        </tr>
     </thead>
@@ -30,8 +32,10 @@
         <td>{{ artikel.omschrijving }}</td>
         <td>{{ artikel.magazijnlocatie }}</td>
         <td>{{ artikel.voorraadaantal }}</td>
+        <td>{{ artikel.codevervangendartikel }}</td>
         <td>{{ artikel.bestelserie }}</td>
-        <td><a href="{{ path('magazijnbeheerderwijzigartikel',{'artikelnummer':artikel.artikelnummer}) }}">Wijzigen</a></td></td>
+        <td>{{ artikel.inkoopprijs }}</td>
+        <td><a href="{{ path('magazijnmeesterwijzigartikel',{'artikelnummer':artikel.artikelnummer}) }}">Wijzigen</a></td></td>
         <td><a href="{{ path('inkoperwijzigartikel',{'artikelnummer':artikel.artikelnummer}) }}">Wijzigen</a></td></td>
       </tr>
     </tbody>
