--- a/app/Resources/views/alle_artikelen.html.twig
+++ b/app/Resources/views/alle_artikelen.html.twig
@@ -16,6 +16,7 @@
       <tr>
         <th>Artikelnummer</th>
         <th>Omschrijving</th>
+        <th>Technische specificaties</th>
         <th>Magazijnlocatie</th>
         <th>Voorraad</th>
         <th>Code vervangend artikel</th>
@@ -30,6 +31,7 @@
       <tr>
         <td>{{ artikel.artikelnummer }}</td>
         <td>{{ artikel.omschrijving }}</td>
+        <td>{{ artikel.technischespecificaties }}</td>
         <td>{{ artikel.magazijnlocatie }}</td>
         <td>{{ artikel.voorraadaantal }}</td>
         <td>{{ artikel.codevervangendartikel }}</td>
