--- a/app/Resources/views/form2.html.twig
+++ b/app/Resources/views/form2.html.twig
@@ -28,7 +28,7 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-          <h4><p>Het artikel is succesvol gewijzigd!</p></h4>
+          <h4><p>Het artikel is succesvol toegevoegd!</p></h4>
         </div>
         <div class="modal-footer">
         </div>
@@ -43,5 +43,4 @@
 </html>
 
     </form>
-
 {% endblock %}
