--- a/app/Resources/views/alle_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_artikelen_inkoper.html.twig
@@ -13,7 +13,7 @@
   <h5><span class="glyphicon glyphicon-log-out"></span><a href="{{ path('security_logout') }}"><font color="black"> Uitloggen</font></a></br></h5>
   <h2>Artikeloverzicht</h2>
   <p class="lead"><small>Welkom inkoper!</small></p>
-  <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('nieuwartikel') }}"><font color="white"> Nieuw artikel</font></a></button></br></h4>
+  <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwartikel') }}"><font color="white"> Nieuw artikel</font></a></button></br></h4>
   <table class="table table-striped">
     <thead>
       <tr>
