--- a/app/Resources/views/alle_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_artikelen_inkoper.html.twig
@@ -25,7 +25,7 @@
         <th>Code vervangend artikel</th>
         <th>Bestelserie</th>
         <th>Inkoopprijs</th>
-        <th>Artikelinformatie wijzigen inkoper:</th>
+        <th>Artikelinformatie wijzigen:</th>
        </tr>
     </thead>
     <tbody>
