--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <form method="post" action="">
-        {{ form_widget(form) }}
+    <h3><div><font color="darkgrey">Artikel wijzigen:</font></div></h3>
+      {{ form_widget(form) }}
         <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
