--- a/app/Resources/views/alle_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_artikelen_inkoper.html.twig
@@ -12,7 +12,6 @@
 <div class="container">
   <h5><span class="glyphicon glyphicon-log-out"></span><a href="{{ path('security_logout') }}"><font color="black"> Uitloggen</font></a></br></h5>
   <h2>Artikeloverzicht</h2>
-  <p class="lead"><small>Welkom inkoper!</small></p>
   <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwartikel') }}"><font color="white"> Nieuw artikel</font></a></button></br></h4>
   <table class="table table-striped">
     <thead>
@@ -21,6 +20,7 @@
         <th>Omschrijving</th>
         <th>Technische specificaties</th>
         <th>Magazijnlocatie</th>
+        <th>Minimumvoorraad</th>
         <th>Voorraad</th>
         <th>Code vervangend artikel</th>
         <th>Bestelserie</th>
@@ -35,6 +35,7 @@
         <td>{{ artikel.omschrijving }}</td>
         <td>{{ artikel.technischespecificaties }}</td>
         <td>{{ artikel.magazijnlocatie }}</td>
+        <td>{{ artikel.minimumvoorraad }}</td>
         <td>{{ artikel.voorraadaantal }}</td>
         <td>{{ artikel.codevervangendartikel }}</td>
         <td>{{ artikel.bestelserie }}</td>
