--- a/app/Resources/views/alle_artikelen_magazijnmeester.html.twig
+++ b/app/Resources/views/alle_artikelen_magazijnmeester.html.twig
@@ -11,9 +11,8 @@
 
 <div class="container">
   <div class="page-header">
-  <h5><span class="glyphicon glyphicon-log-out"></span><a href="{{ path('security_logout') }}"><font color="black"> Uitloggen</font></a></br></h5>
+  <h5><span class="glyphicon glyphicon-log-out"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="black"> Magazijnmeester homepagina</font></a></br></h5>
   <h1>Artikeloverzicht</h1>
-  <p class="lead"><small>Welkom magazijnmeester!</small></p>
   <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('magazijnmeesternieuwartikel') }}"><font color="white"> Nieuw artikel</font></a></button></br></h4>
     <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('nieuwgoederenontvangst') }}"><font color="white"> Nieuw Goederenontvangst</font></a></button></br></h4>
   <table class="table table-striped table-hover">
