--- a/app/Resources/views/nieuw_goederenontvangst.html.twig
+++ b/app/Resources/views/nieuw_goederenontvangst.html.twig
@@ -1,39 +1,25 @@
 {% extends 'base.html.twig' %}
-{% block head %}
-
-{% endblock %}
 {% block body %}
-    <form method="POST" action="">
+    <form method="post" action="">
+  <h3><div><font color="darkgrey">Goederenontvangst toevoegen:</font></div></h3>
+        {{ form_widget(form) }}
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Goederenontvangst toevoegen</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ asset('web/css/styles.css') }}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+  <button class="btn btn-info" type="submit">Verzenden</button>
+    <a href="javascript:history.back()">Annuleren</a>
 
-        <table>
-            <tr>
-                <td>Ontvangstdatum:</td>
-                <td><input type="text"/></td>
-            </tr>
-            <tr>
-                <td>Omschrijving</td>
-                <td><input type="text"/></td>
-            </tr>
-            <tr>
-                <td>Hoeveelheid</td>
-                <td><input type="text"/></td>
-            </tr>
-            <tr>
-                <td>Keuringscode</td>
-                <td><input type="text"/></td>
-            </tr>
-            <tr>
-                <td>Artikelnummer</td>
-                <td><input type="text"/></td>
-            </tr>
-            <tr>
-                <td>Naam Leverancier</td>
-                <td><input type="T"/></td>
-            </tr>
+</body>
+</html>
 
-        </table>
-
-        <input class="btn btn-default" type="submit" />
-        <a href="javascript:history.back()">Annuleren</a>
     </form>
 {% endblock %}
