--- a/app/Resources/views/frontpagemagazijnmeester.html.twig
+++ b/app/Resources/views/frontpagemagazijnmeester.html.twig
@@ -14,8 +14,8 @@
   </div>
 <div class="container">
 
-  <h2 style = "text-align:center; font-size: 35px">Welkom magazijnmeester!</h2>
-  <h5 style ="text-align:right"><span class="glyphicon glyphicon-home"></span><a href="{{ path('home') }}"><font color="black"> Home</font></a></br></h5>
+  <h2 style = "text-align:center; font-size: 35px">Welkom magazijnmeester</h2>
+  <!--<h5 style ="text-align:right"><span class="glyphicon glyphicon-home"></span><a href="{{ path('home') }}"><font color="black"> Home</font></a></br></h5>-->
   <div class="row">
       <div class="col-sm-4">
       <h3>Artikelen</h3>
