--- a/app/Resources/views/alle_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_artikelen_inkoper.html.twig
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-  <h5><span class="glyphicon glyphicon-log-out"></span><a href="{{ path('inkoperhome') }}"><font color="black"> Inkoper homepagina</font></a></br></h5>
+  <h5><span class="glyphicon glyphicon-home"></span><a href="{{ path('inkoperhome') }}"><font color="black"> Home</font></a><br/></h5>
   <h2>Artikeloverzicht</h2>
   <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwartikel') }}"><font color="white"> Nieuw artikel</font></a></button></br></h4>
   <table class="table table-striped">
@@ -19,7 +19,6 @@
         <th>Artikelnummer</th>
         <th>Omschrijving</th>
         <th>Technische specificaties</th>
-        <th>Magazijnlocatie</th>
         <th>Voorraad</th>
         <th>Code vervangend artikel</th>
         <th>Bestelserie</th>
@@ -33,7 +32,6 @@
         <td>{{ artikel.artikelnummer }}</td>
         <td>{{ artikel.omschrijving }}</td>
         <td>{{ artikel.technischespecificaties }}</td>
-        <td>{{ artikel.magazijnlocatie }}</td>
         <td>{{ artikel.voorraadaantal }}</td>
         <td>{{ artikel.codevervangendartikel }}</td>
         <td>{{ artikel.bestelserie }}</td>
