--- a/app/Resources/views/alle_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_artikelen_inkoper.html.twig
@@ -13,6 +13,7 @@
   <h5><span class="glyphicon glyphicon-log-out"></span><a href="{{ path('inkoperhome') }}"><font color="black"> Inkoper homepagina</font></a></br></h5>
   <h2>Artikeloverzicht</h2>
   <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwartikel') }}"><font color="white"> Nieuw artikel</font></a></button></br></h4>
+  <h4><button class="btn btn-info"><span class="glyphicon glyphicon-search"></span><a href="{{ path('inkoperzoekomschrijving') }}"><font color="white"> Zoek omschrijving</font></a></button></br></h4>
   <table class="table table-striped">
     <thead>
       <tr>
