artikel zoeken controller

--- a/app/Resources/views/alle_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_artikelen_inkoper.html.twig
@@ -14,6 +14,8 @@
   <h2>Artikeloverzicht</h2>
   <p class="lead"><small>Welkom inkoper!</small></p>
   <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwartikel') }}"><font color="white"> Nieuw artikel</font></a></button></br></h4>
+   <h4><button class="btn btn-info"><span class="glyphicon glyphicon-search"></span><a href="{{ path('inkoperzoekartikel') }}"><font color="white"> Zoek artikel</font></a></button></br></h4>
+
   <table class="table table-striped">
     <thead>
       <tr>
