commit titel: overzicht Goederenontvangst veranderd in; overzicht ontvangen goederen

--- a/app/Resources/views/alle_ontvangen_goederen.html.twig
+++ b/app/Resources/views/alle_ontvangen_goederen.html.twig
@@ -11,7 +11,7 @@
 
 <div class="container">
   <h5><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="black"> Home</font></a><br/></h5>
-  <h2>Overzicht Goederenontvangst</h2>
+  <h2>Overzicht ontvangen goederen</h2>
   <table class="table table-striped">
     <thead>
       <tr>
