--- a/app/Resources/views/frontpagemagazijnmeester.html.twig
+++ b/app/Resources/views/frontpagemagazijnmeester.html.twig
@@ -26,7 +26,7 @@
       <div class="col-sm-4">
       <h3>Goederenontvangst</h3>
       <h4><button class="btn btn-info btn-lg"><a href="{{ path('alleontvangengoederen') }}"><font color="white"> Overzicht van goederenontvangst </font></a><span class="glyphicon glyphicon-chevron-right"></button></br></h4>
-      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('nieuwgoederenontvangst') }}"><font color="white"> Nieuw Goederenontvangst</font></a></button></br></h4>
+      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('nieuwleverancier') }}"><font color="white"> Nieuwe ontvangstmelding</font></a></button></br></h4>
     </div>
 </div>
 
