--- a/app/Resources/views/nieuw_leverancier.html.twig
+++ b/app/Resources/views/nieuw_leverancier.html.twig
@@ -6,7 +6,7 @@
         <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Goederenontvangst toevoegen</title>
+  <title>Leverancier toevoegen</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ asset('web/css/styles.css') }}">
