--- a/app/Resources/views/nieuw_goederenontvangst.html.twig
+++ b/app/Resources/views/nieuw_goederenontvangst.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <form method="post" action="">
-  <h3><div><font color="darkgrey">Vul eerst de leverancier en de leveranciers-id in:</font></div></h3>
+  <h3><div><font color="darkgrey">Artikel aan goederenontvangst toevoegen:</font></div></h3>
         {{ form_widget(form) }}
         <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Leverancier toevoegen</title>
+  <title>Goederenontvangst toevoegen</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ asset('web/css/styles.css') }}">
