--- a/app/Resources/views/ontvangstmelding.html.twig
+++ b/app/Resources/views/ontvangstmelding.html.twig
@@ -10,21 +10,38 @@
 <body>
 
 <div class="container">
-  <h5><span class="glyphicon glyphicon-home"></span><a href="{{ path('inkoperhome') }}"><font color="black"> Home</font></a><br/></h5>
-  <h2>ontvangstmelding</h2>
-  <table class="table table-striped table-hover">
+  <h5><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="black"> Home</font></a><br/></h5>
+  <h2>Ontvangstmeldingen</h2>
+  <button class="btn btn-info btn-default"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('magazijnmeesternieuwgoederenontvangst') }}"><font color="white"> Artikel toevoegen aan ontvangstmelding</font></a></button></br>
+  <table class="table table-striped">
+    {% for goederenontvangst in goederen %}
     <thead>
       <tr>
-        <th>Ontvangstdatum</th>
-        <th>Naam leverancier</th>
+        <th><h4><u><font color="blue">Leverancier:</font></u></h4></th>
+        <td><h4><font color="blue">{{ goederenontvangst.naamleverancier }}</font></h4></td>
+      </tr>
+      <tr>
+        <th><h4><u><font color="blue">Ontvangstdatum:</font></u></h4></th>
+        <td><h4><font color="blue">{{ goederenontvangst.ontvangstdatum|date('d-m-Y') }}</font></h4></td>
        </tr>
     </thead>
     <tbody>
-     {% for goederenontvangst in goederen %}
       <tr>
-        <td>{{ goederenontvangst.ontvangstdatum|date('Y-m-d') }}</td>
-        <td>{{ goederenontvangst.naamleverancier }}</td>
+      <th>Artikelnummer</th>
+      <th>Omschrijving</th>
+      <th>Hoeveelheid</th>
+      <th>Kwaliteit</th>
+    </tr>
+    {% for artikel in artikelen %}
+    <tr>
+      <td>{{ artikel.artikelnummer }}</td>
+      <td>{{ artikel.omschrijving }}</td>
+      {% for ontvangstregel in ontvangstregels %}
+      <td>{{ ontvangstregel.hoeveelheid }}</td>
+      <td>{{ ontvangstregel.kwaliteit }}</td>
       </tr>
+      {% endfor %}
+      {% endfor %}
     </tbody>
     {% endfor %}
   </table>
