--- a/app/Resources/views/nieuw_bestelorder.html.twig
+++ b/app/Resources/views/nieuw_bestelorder.html.twig
@@ -6,7 +6,7 @@
         <!DOCTYPE html>
         <html lang="en">
         <head>
-            <title>Bootstrap Example</title>
+            <title>Nieuw bestelorder</title>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -18,25 +18,6 @@
         <!-- Trigger the modal with a button -->
         <button class="btn btn-info" type="submit" data-toggle="modal" data-target="#myModal">Verzenden</button>
         <a href="javascript:history.back()">Annuleren</a>
-
-        <!-- Modal -->
-        <div class="modal fade" id="myModal" role="dialog">
-            <div class="modal-dialog">
-
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
-                    <div class="modal-body">
-                        <h4><p>Het artikel is succesvol toegevoegd!</p></h4>
-                    </div>
-                    <div class="modal-footer">
-                    </div>
-                </div>
-
-            </div>
-        </div>
 
         </div>
 
