--- a/app/Resources/views/frontpageinkoper.html.twig
+++ b/app/Resources/views/frontpageinkoper.html.twig
@@ -18,11 +18,16 @@
   <!--<h5 style ="text-align:right"><span class="glyphicon glyphicon-home"></span><a href="{{ path('home') }}"><font color="black"> Home</font></a></br></h5>-->
   <div class="row">
       <div class="col-sm-4">
-      <h3>Artikelen</h3>
-      <h4><button class="btn btn-info btn-lg"><a href="{{ path('inkoperalleartikelen') }}"><font color="white">Alle artikelen </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
-      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwartikel') }}"><font color="white"> Nieuw artikel toevoegen</font></a></button></br></h4>
-    </div>
-</div>
+        <h3>Artikelen</h3>
+        <h4><button class="btn btn-info btn-lg"><a href="{{ path('inkoperalleartikelen') }}"><font color="white">Alle artikelen </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
+        <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwartikel') }}"><font color="white"> Nieuw artikel toevoegen</font></a></button></br></h4>
+      </div>
+      <div class="col-sm-4">
+          <h3>Bestelorder</h3>
+          <h4><button class="btn btn-info btn-lg"><a href="{{ path('inkoperallebestelorders') }}"><font color="white">Alle Bestelorders </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
+          <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkoperbestelorder') }}"><font color="white"> Nieuw bestelorder toevoegen</font></a></button></br></h4>
+      </div>
+  </div>
 
 </body>
 </html>
