--- a/app/Resources/views/frontpagemagazijnmeester.html.twig
+++ b/app/Resources/views/frontpagemagazijnmeester.html.twig
@@ -25,6 +25,7 @@
 </div>
       <div class="col-sm-4">
       <h3>Goederenontvangst</h3>
+      <h4><button class="btn btn-info btn-lg"><a href="{{ path('magazijnmeesterontvangstmelding') }}"><font color="white">Ontvangstmeldingen </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
       <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('magazijnmeesternieuwleverancier') }}"><font color="white"> Goederenontvangst registreren</font></a></button></br></h4>
     </div>
 </div>
