--- a/app/Resources/views/ontvangstmelding.html.twig
+++ b/app/Resources/views/ontvangstmelding.html.twig
@@ -12,8 +12,8 @@
 <div class="container">
   <h5><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="black"> Home</font></a><br/></h5>
   <h2>Ontvangstmeldingen</h2>
-  <button class="btn btn-info btn-default"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('magazijnmeesternieuwgoederenontvangst') }}"><font color="white"> Artikel toevoegen aan ontvangstmelding</font></a></button></br>
-  <table class="table table-striped">
+  <button class="btn btn-info btn-default"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('magazijnmeesternieuwontvangstregel') }}"><font color="white"> Artikel toevoegen aan ontvangstmelding</font></a></button></br>
+  <table class="table table-striped table-hover">
     {% for goederenontvangst in goederen %}
     <thead>
       <tr>
@@ -32,18 +32,22 @@
       <th>Hoeveelheid</th>
       <th>Kwaliteit</th>
     </tr>
-    {% for artikel in artikelen %}
     <tr>
-      <td>{{ artikel.artikelnummer }}</td>
-      <td>{{ artikel.omschrijving }}</td>
       {% for ontvangstregel in ontvangstregels %}
+      <td>{{ ontvangstregel.artikelnummer }}</td>
+      {% for artikel in artikelen %}
+      {% if(ontvangstregel.artikelnummer == artikel.artikelnummer) %}
+      <td>{{ artikel.omschrijving }}</td>
+      {% endif %}
+      {% endfor %}
       <td>{{ ontvangstregel.hoeveelheid }}</td>
       <td>{{ ontvangstregel.kwaliteit }}</td>
       </tr>
       {% endfor %}
-      {% endfor %}
     </tbody>
     {% endfor %}
+    <tr>
+    </tr>
   </table>
 </div>
 
