--- a/app/Resources/views/alle_gebruikers.html.twig
+++ b/app/Resources/views/alle_gebruikers.html.twig
@@ -12,7 +12,7 @@
 <div class="container">
   <h2>Gebruikersoverzicht</h2>
   <table class="table table-striped">
-    <h5 style ="text-align:right"><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('administratorhome') }}"><font color="black"> Overzicht</font></a></br></h5>
+    <h5 style ="text-align:right"><span class="glyphicon glyphicon-home"></span><a href="{{ path('administratorhome') }}"><font color="black"> Home</font></a></br></h5>
     <thead>
       <tr>
         <th>Gebruikersnaam</th>
