--- a/app/Resources/views/form_artikel_toevoegen.html.twig
+++ b/app/Resources/views/form_artikel_toevoegen.html.twig
@@ -15,28 +15,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <!-- Trigger the modal with a button -->
-  <button class="btn btn-info" type="submit" data-toggle="modal" data-target="#myModal">Verzenden</button>
+  <button class="btn btn-info">Verzenden</button>
     <a href="javascript:history.back()">Annuleren</a>
-
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-        <div class="modal-body">
-          <h4><p>Het artikel is succesvol toegevoegd!</p></h4>
-        </div>
-        <div class="modal-footer">
-        </div>
-      </div>
-    </div>
-  </div>
-
 </div>
 
 </body>
