--- a/app/Resources/views/frontpageadministrator.html.twig
+++ b/app/Resources/views/frontpageadministrator.html.twig
@@ -15,12 +15,11 @@
   </div>
 <div class="container">
   <h2 style = "text-align:center; font-size: 35px">Welkom Administrator!</h2>
-  <h5 style ="text-align:right"><span class="glyphicon glyphicon-home"></span><a href="{{ path('home') }}"><font color="black"> Home</font></a></br></h5>
   <div class="row">
       <div class="col-sm-4">
       <h3>Beheren:</h3>
-      <h4><button class="btn btn-info btn-lg"><a href="{{ path('gebruikerregistreren') }}"><font color="white">Een nieuwe gebruiker toevoegen </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
       <h4><button class="btn btn-info btn-lg"><a href="{{ path('allegebruikers') }}"><font color="white">Overzicht van alle gebruikers </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
+      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('gebruikerregistreren') }}"><font color="white"> Een nieuwe gebruiker toevoegen</font></a></button></br></h4>
     </div>
 </div>
 
