--- a/app/Resources/views/alle_bestelorders.html.twig
+++ b/app/Resources/views/alle_bestelorders.html.twig
@@ -13,7 +13,7 @@
     <h5><span class="glyphicon glyphicon-home"></span><a href="{{ path('inkoperhome') }}"><font color="black"> Home</font></a><br/></h5>
     <h2>Bestelorders:</h2>
     <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkoperbestelorder') }}"><font color="white"> Nieuw bestelorder</font></a></button><br/></h4>
-    <table class="table table-striped">
+    <table class="table table-striped table-hover">
         <thead>
         <tr>
             <th>Bestelordernummer</th>
