--- a/app/Resources/views/alle_gebruikers.html.twig
+++ b/app/Resources/views/alle_gebruikers.html.twig
@@ -11,7 +11,7 @@
 
 <div class="container">
   <h2>Gebruikersoverzicht</h2>
-  <table class="table table-striped">
+  <table class="table table-striped table-hover">
     <h5 style ="text-align:right"><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('administratorhome') }}"><font color="black"> Overzicht</font></a></br></h5>
     <thead>
       <tr>
