--- a/app/Resources/views/omschrijvingzoek.html.twig
+++ b/app/Resources/views/omschrijvingzoek.html.twig
@@ -11,6 +11,7 @@
 
 <div class="container">
   <h2>Zoek op omschrijving</h2>
+  <span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('inkoperalleartikelen') }}"><font color="black"> Terug</font></a></br>
 
   <form method="POST">
 
