commit nieuwe button layout

--- a/app/Resources/views/frontpage.html.twig
+++ b/app/Resources/views/frontpage.html.twig
@@ -10,21 +10,21 @@
 
 <body>
 <div class="jumbotron text-center">
-<h1 style="font-size: 65px; font-family: 'Garamond', cursive;"><font color="#DF0101"><B>Lunenburg</B></font></P></h1>
+<h1 style="font-size: 50px; font-family: 'Garamond', cursive;"><font color="#DF0101"><B>Lunenburg</B></font></P></h1>
   </div>
 <div class="container">
 
-  <h2 style = "text-align:center; font-size: 35px">Welkom</h2>
+  <h2 style = "text-align:center; font-size: 30px">Welkom</h2>
   <div class="row">
-      <div class="align-left">
+      <div class="pull-left" style="width: 33%">
       <h3>Inkoper:</h3>
       <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('inkoperhome') }}"><font color="white"> Inloggen</font></a></button></br></h4>
     </div>
-      <div class="align-left">
+      <div class="pull-left" style="width: 33%">
       <h3>Magazijnmeester:</h3>
         <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="white"> Inloggen</font></a></button></br></h4>
     </div>
-    <div class="align-left">
+  <div class="pull-left" style="width: 33%">
       <h3>Administrator:</h3>
         <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('administratorhome') }}"><font color="white"> Inloggen</font></a></button></br></h4>
     </div>
