--- a/app/Resources/views/alle_artikelen_magazijnmeester.html.twig
+++ b/app/Resources/views/alle_artikelen_magazijnmeester.html.twig
@@ -11,8 +11,8 @@
 
 <div class="container">
   <div class="page-header">
-  <h5><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="black"> Home</font></a><br/></h5>
   <h1>Artikeloverzicht</h1>
+  <h5><button class="btn btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="white"> Home</font></a><br/></button></h5>
   <table class="table table-striped table-hover">
     <thead>
       <tr>
