--- a/app/Resources/views/alle_bestelorders.html.twig
+++ b/app/Resources/views/alle_bestelorders.html.twig
@@ -10,9 +10,16 @@
 <body>
 
 <div class="container">
-    <h5><span class="glyphicon glyphicon-home"></span><a href="{{ path('inkoperhome') }}"><font color="black"> Home</font></a><br/></h5>
     <h2>Bestelorders:</h2>
+
+    <div class="pull-left" style="width: 8%">
+    <h4><button class="btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('inkoperhome') }}"><font color="white"> Home</font></a><br/></h4>
+    </div>
+
+    <div class="pull-left" style="width: 8%">
     <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkoperbestelorder') }}"><font color="white"> Nieuw bestelorder</font></a></button><br/></h4>
+    </div>
+
     <table class="table table-striped table-hover">
         <thead>
         <tr>
