--- a/app/Resources/views/alle_gebruikers.html.twig
+++ b/app/Resources/views/alle_gebruikers.html.twig
@@ -11,8 +11,8 @@
 
 <div class="container">
   <h2>Gebruikersoverzicht</h2>
+  <h5><button class="btn btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('administratorhome') }}"><font color="white"> Home</font></a><br/></button></h5>
   <table class="table table-striped table-hover">
-    <h5 style ="text-align:right"><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('administratorhome') }}"><font color="black"> Overzicht</font></a><br/></h5>
     <thead>
       <tr>
         <th>Gebruikersnaam</th>
