--- a/app/Resources/views/frontpageinkoper.html.twig
+++ b/app/Resources/views/frontpageinkoper.html.twig
@@ -10,10 +10,15 @@
 
 <body>
 <div class="jumbotron text-center">
-  <h1 style="font-size: 65px; font-family: 'Garamond', cursive;"><font color="#DF0101"><B>Lunenburg</B></font><P/></h1>
+  <h1 style="font-size: 50px; font-family: 'Garamond', cursive;"><font color="#DF0101"><B>Lunenburg</B></font><P/></h1>
 </div>
+
+<div class="pull-right" style="width: 15%">
+<h4><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('home') }}"><font color="black"> Terug naar inlogscherm</font></a></br></h4>
+</div>
+
 <div class="container">
-  <h2 style = "text-align:center; font-size: 35px">Welkom inkoper</h2>
+  <h2 style = "text-align:center; font-size: 30px">Welkom inkoper</h2>
   <!--<h5 style ="text-align:right"><span class="glyphicon glyphicon-home"></span><a href="{{ path('home') }}"><font color="black"> Home</font></a></br></h5>-->
   <div class="row">
       <div class="col-sm-4">
