--- a/app/Resources/views/ontvangstmelding.html.twig
+++ b/app/Resources/views/ontvangstmelding.html.twig
@@ -10,9 +10,15 @@
 <body>
 
 <div class="container">
-  <h5><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="black"> Home</font></a><br/></h5>
   <h2>Ontvangstmeldingen</h2>
-  <button class="btn btn-info btn-default"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('magazijnmeesternieuwontvangstregel') }}"><font color="white"> Artikel toevoegen aan ontvangstmelding</font></a></button></br>
+  <div class="pull-left" style="width: 8%">
+  <h5><button class="btn btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="white"> Home</font></a></button></h5>
+  </div>
+
+  <div class="pull-left" style="width: 8%">
+  <h5><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('magazijnmeesternieuwontvangstregel') }}"><font color="white"> Artikel toevoegen aan ontvangstmelding</font></a></button></h5>
+  </div>
+
   <table class="table table-striped table-hover">
 
     {% for goederenontvangst in goederen %}
