boom you've got overview of deleted products

--- a/app/Resources/views/frontpageinkoper.html.twig
+++ b/app/Resources/views/frontpageinkoper.html.twig
@@ -24,6 +24,7 @@
       <div class="col-sm-4">
         <h3>Artikelen</h3>
         <h4><button class="btn btn-info btn-lg"><a href="{{ path('inkoperalleartikelen') }}"><font color="white">Alle artikelen </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
+          <h4><button class="btn btn-info btn-lg"><a href="{{ path('inkoperalleverwijderdeartikelen') }}"><font color="white">Alle  verwijderde artikelen </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
         <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwartikel') }}"><font color="white"> Nieuw artikel toevoegen</font></a></button></br></h4>
       </div>
       <div class="col-sm-4">
