--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,8 +5,11 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
+        <script src=""{{ asset('js/jquery-3.2.1.min.js') }}></script>
+        <script src="{{ 'js/bootstrap.min.js' }}"></script>
     </head>
-    <body>
+    <body class="container">
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
