--- a/app/Resources/views/Registration/register.html.twig
+++ b/app/Resources/views/Registration/register.html.twig
@@ -2,7 +2,8 @@
 
 {{ form_start(form) }}
     {{ form_row(form.username) }}
-    {{ form_row(form.email) }}
+    {{ form_row(form.lastname) }}
+    {{ form_row(form.email)	}}
     {{ form_row(form.plainPassword.first) }}
     {{ form_row(form.plainPassword.second) }}
     {{ form_row(form.roles) }}
