--- a/app/Resources/views/frontpage.html.twig
+++ b/app/Resources/views/frontpage.html.twig
@@ -24,6 +24,10 @@
       <h3>Magazijnmeester:</h3>
         <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="white"> Inloggen</font></a></button></br></h4>
     </div>
+    <div class="pull-left" style="width: 33%">
+      <h3>Verkoper:</h3>
+      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('verkoperhome') }}"><font color="white"> Inloggen</font></a></button></br></h4>
+    </div>
   <div class="pull-left" style="width: 33%">
       <h3>Administrator:</h3>
         <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('administratorhome') }}"><font color="white"> Inloggen</font></a></button></br></h4>
