--- a/app/Resources/views/alle_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_artikelen_inkoper.html.twig
@@ -48,7 +48,7 @@
         <td>{{ artikel.omschrijving }}</td>
         <td>{{ artikel.technischespecificaties }}</td>
         <td>{{ artikel.minimumvoorraad }}</td>
-        <td>{{ artikel.voorraadaantal }}</td>
+        <td>{{ artikel.vrijevoorraad }}</td>
         <td>{{ artikel.codevervangendartikel }}</td>
         <td>{{ artikel.bestelserie }}</td>
         <td>{{ artikel.inkoopprijs }}</td>
