voorraden gefixt in symfony 3.4.11

--- a/app/Resources/views/alle_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_artikelen_inkoper.html.twig
@@ -34,7 +34,7 @@
         <th>Omschrijving</th>
         <th>Technische specificaties</th>
         <th>Minimumvoorraad</th>
-        <th>Voorraad</th>
+        <th>Vrije voorraad</th>
         <th>Code vervangend artikel</th>
         <th>Bestelserie</th>
         <th>Inkoopprijs</th>
@@ -48,7 +48,7 @@
         <td>{{ artikel.omschrijving }}</td>
         <td>{{ artikel.technischespecificaties }}</td>
         <td>{{ artikel.minimumvoorraad }}</td>
-        <td>{{ artikel.voorraadaantal }}</td>
+        <td>{{ artikel.vrijevoorraad }}</td>
         <td>{{ artikel.codevervangendartikel }}</td>
         <td>{{ artikel.bestelserie }}</td>
         <td>{{ artikel.inkoopprijs }}</td>
