--- a/app/Resources/views/bestelopdracht.html.twig
+++ b/app/Resources/views/bestelopdracht.html.twig
@@ -15,10 +15,6 @@
   <h5><button class="btn btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('inkoperhome') }}"><font color="white"> Home</font></a></button></h5>
   </div>
 
-  <div class="pull-left" style="width: 8%">
-  <h5><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwbestelregel') }}"><font color="white"> Artikel toevoegen aan bestelorder</font></a></button></h5>
-  </div>
-
   <table class="table table-striped table-hover">
 
     {% for bestelorder in bestelorders %}
@@ -37,6 +33,8 @@
       <th>Artikelnummer</th>
       <th>Omschrijving</th>
       <th>Hoeveelheid</th>
+      <th><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwbestelregel',{'bestelordernummer':bestelorder.bestelordernummer}) }}"><font color="white"> Artikel toevoegen aan bestelorder</font></a></button></th>
+
     </tr>
     <tr>
       {% for bestelregel in bestelregels %}
@@ -48,7 +46,7 @@
       {% endfor %}
       <td>{{ bestelregel.hoeveelheid }}</td>
       </tr>
-      {% endfor %}
+    {% endfor %}
     </tbody>
     {% endfor %}
     <tr>
