--- a/app/Resources/views/zoek_magazijnmeester.html.twig
+++ b/app/Resources/views/zoek_magazijnmeester.html.twig
@@ -27,6 +27,9 @@
         <th>Artikelnummer</th>
         <th>Omschrijving</th>
         <th>Magazijnlocatie</th>
+        <th>Vrije voorraad</th>
+        <th>Gereserveerde voorraad</th>
+        <th>Technische voorraad</th>
        </tr>
     </thead>
     <tbody>
@@ -35,6 +38,9 @@
         <td>{{ artikel.artikelnummer }}</td>
         <td>{{ artikel.omschrijving }}</td>
         <td>{{ artikel.magazijnlocatie }}</td>
+        <td>{{ artikel.vrijevoorraad }}</td>
+        <td>{{ artikel.gereserveerdevoorraad }}</td>
+        <td>{{ artikel.technischevoorraad }}</td>
       </tr>
     </tbody>
     {% endfor %}
