--- a/app/Resources/views/frontpageinkoper.html.twig
+++ b/app/Resources/views/frontpageinkoper.html.twig
@@ -14,7 +14,7 @@
 </div>
 
 <div class="pull-right" style="width: 15%">
-<h4><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('login') }}"><font color="black"> Terug naar inlogscherm</font></a></br></h4>
+<h4><span class="glyphicon glyphicon glyphicon-log-out"></span><a href="{{ path('login') }}"><font color="black"> Uitloggen </font></a></br></h4>
 </div>
 
 <div class="container">
