--- a/app/Resources/views/Registration/register.html.twig
+++ b/app/Resources/views/Registration/register.html.twig
@@ -1,5 +1,18 @@
 {# app/Resources/views/registration/register.html.twig #}
-
+<form method="post" action="">
+  <h3><div><font color="darkgrey">Nieuw Gebruiker:</font></div></h3>
+        {{ form_widget(form) }}
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Wijzigen</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=10">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 {{ form_start(form) }}
     {{ form_row(form.username) }}
     {{ form_row(form.lastname) }}
@@ -8,5 +21,8 @@
     {{ form_row(form.plainPassword.second) }}
     {{ form_row(form.roles) }}
 
-<button type="submit">Register!</button>
+<body>
+<button type="submit" class="btn btn-info">Register!</button>
+</body>
+</html>
 {{ form_end(form) }}
