--- a/app/Resources/views/Security/login.html.twig
+++ b/app/Resources/views/Security/login.html.twig
@@ -1,17 +1,25 @@
 {# app/Resources/views/security/login.html.twig #}
 {# ... you will probably extend your base template, like base.html.twig #}
 
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
 
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+<div class="container" >
+    <div class="row">
+        <div class="col-md-offset-5 col-md-3">
+            <div class="form-login">
+            <h1 style="font-size: 50px; font-family: 'Garamond', cursive;"><font color="#DF0101"><B>Lunenburg</B></font></P></h1>
 <form action="{{ path('login') }}" method="post">
-    <label for="username">Username:</label>
+    <label for="username">Gebruikersnaam:</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
     </br></br>
 
-    <label for="password">Password:</label>
+    <label for="password">Wachtwoord:</label>
     <input type="password" id="password" name="_password" />
 
     {#
@@ -20,6 +28,16 @@
         <input type="hidden" name="/ROLE_USER" value="/account" />
     #}
     </br>
-
-    <button type="submit">login</button>
+<br>
+    <button type="submit"  class="btn btn-primary btn-md">Login</button></br>
 </form>
+
+{% if error %}
+    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+{% endif %}
+  
+            </div>
+        
+        </div>
+    </div>
+</div>
