--- a/app/Resources/views/frontpageinkoper.html.twig
+++ b/app/Resources/views/frontpageinkoper.html.twig
@@ -26,7 +26,7 @@
   <div class="container">
   <div class="alert alert-danger">
     <div class="text-center">
-       <strong>Er is te weinig voorraad, er moeten artikelen besteld worden!</strong><a href="{{ path('inkoperalletebestellenartikelen') }}" class="alert-link"> Ga naar de te bestellen artikelen.</a>
+       <strong>Er is te weinig op voorraad. Er moeten artikelen besteld worden!</strong><a href="{{ path('inkoperalletebestellenartikelen') }}" class="alert-link"> Ga naar de te bestellen artikelen.</a>
   </div>
   </div>
   </div>
@@ -36,12 +36,11 @@
       <div class="col-sm-4">
         <h3>Artikelen</h3>
         <h4><button class="btn btn-info btn-lg"><a href="{{ path('inkoperalleartikelen') }}"><font color="white">Alle artikelen </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
-          <h4><button class="btn btn-info btn-lg"><a href="{{ path('inkoperalleverwijderdeartikelen') }}"><font color="white">Alle  verwijderde artikelen </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
         <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwartikel') }}"><font color="white"> Nieuw artikel toevoegen</font></a></button></br></h4>
       </div>
       <div class="col-sm-4">
           <h3>Bestelorder</h3>
-          <h4><button class="btn btn-info btn-lg"><a href="{{ path('inkoperallebestelorders') }}"><font color="white">Alle Bestelorders </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
+          <h4><button class="btn btn-info btn-lg"><a href="{{ path('inkoperbestelopdracht') }}"><font color="white">Alle Bestelopdrachten </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
           <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkoperbestelorder') }}"><font color="white"> Bestelorder toevoegen</font></a></button></br></h4>
       </div>
   </div>
