--- a/app/Resources/views/alle_tebestellen_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_tebestellen_artikelen_inkoper.html.twig
@@ -20,8 +20,7 @@
         <th>Artikelnummer</th>
         <th>Omschrijving</th>
         <th>Bestelserie</th>
-        <th>Besteld</th>
-        <th>Artikel bestellen</th>
+        <th>Besteld/Artikel bestellen</th>
        </tr>
     </thead>
     <tbody>
@@ -31,18 +30,24 @@
         <td>{{ artikel.artikelnummer }}</td>
         <td>{{ artikel.omschrijving }}</td>
         <td>{{ artikel.bestelserie }}</td>
-         {% for bestelregel in bestelregels %}
-          {% if(bestelregel.artikelnummer == artikel.artikelnummer) %}
-        <td>{{ bestelregel.besteld }}</td>
-          {% endif %}
-        {% endfor %}
+
+        {% for bestelregel in bestelregels %}
+        {% if(bestelregel.artikelnummer == artikel.artikelnummer) %}
+        {% if(bestelregel.besteld != true) %}
+
         <td><a href="{{ path('inkoperbestelorder',{'artikelnummer':artikel.artikelnummer}) }}">Bestellen</a></td></td>
-      
-      </tr>
-      
-    </tbody>
-    {% endif %}
+
+      {% else %}
+        <td>{{ bestelregel.besteld }}</td>
+        {% endif %}
+        {%endif%}
         {% endfor %}
+        
+      </tr>
+
+      {% endif %}
+      {% endfor %}
+    </tbody>
 
   </table>
 </div>
