--- a/app/Resources/views/frontpagemagazijnmeester.html.twig
+++ b/app/Resources/views/frontpagemagazijnmeester.html.twig
@@ -24,8 +24,8 @@
         <h4><button class="btn btn-info btn-lg"><a href="{{ path('magazijnmeesteralleartikelen') }}"><font color="white">Alle artikelen </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
       </div>
       <div class="col-sm-4">
-          <h3>Bestelorder</h3>
-          <h4><button class="btn btn-info btn-lg"><a href="{{ path('magazijnmeesterbestelopdracht') }}"><font color="white">Alle Bestelopdrachten </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
+          <h3>Te ontvangen goederen</h3>
+          <h4><button class="btn btn-info btn-lg"><a href="{{ path('magazijnmeesterbestelopdracht') }}"><font color="white">Alle te ontvangen goederen </font></a><span class="glyphicon glyphicon-chevron-right"></span></button></br></h4>
       </div>
       <div class="col-sm-4">
         <h3>Goederenontvangst</h3>
