--- a/app/Resources/views/magazijnmeester_bestelopdracht.html.twig
+++ b/app/Resources/views/magazijnmeester_bestelopdracht.html.twig
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-  <h2>Bestelopdrachten</h2>
+  <h2>Alle te ontvangen goederen</h2>
   <div class="pull-left" style="width: 8%">
   <h5><button class="btn btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="white"> Home</font></a></button></h5>
   </div>
