--- a/app/Resources/views/ontvangstmelding.html.twig
+++ b/app/Resources/views/ontvangstmelding.html.twig
@@ -11,7 +11,7 @@
 
 <div class="container">
   <h2>Ontvangstmeldingen</h2>
-  <div class="pull-left" style="width: 8%">
+  <div class="pull-right" style="width: 8%">
   <h5><button class="btn btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="white"> Home</font></a></button></h5>
   </div>
 
