--- a/app/Resources/views/frontpageverkoper.html.twig
+++ b/app/Resources/views/frontpageverkoper.html.twig
@@ -9,12 +9,9 @@
 </head>
 
 <body>
-<div class="jumbotron text-center">
-<h1 style="font-size: 50px; font-family: 'Garamond', cursive;"><font color="#DF0101"><B>Lunenburg</B></font></P></h1>
-</div>
 
 <div class="pull-right" style="width: 15%">
-<h4><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('home') }}"><font color="black"> Terug naar inlogscherm</font></a></br></h4>
+<h4><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('login') }}"><font color="black"> Uitloggen</font></a></br></h4>
 </div>
 
 <div class="container">
