--- a/app/Resources/views/omschrijvingzoek_inkoper.html.twig
+++ b/app/Resources/views/omschrijvingzoek_inkoper.html.twig
@@ -11,7 +11,9 @@
 
 <div class="container">
   <h2>Zoek op omschrijving</h2>
-  <span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('inkoperalleartikelen') }}"><font color="black"> Terug</font></a></br>
+  <div class="pull-right" style="width:8%">
+    <span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('inkoperalleartikelen') }}"><font color="black"> Terug</font></a></br>
+  </div>
 
   <form method="POST">
 
